Ability to delete event

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -22,7 +22,7 @@
     <input id="end_date" name="end_date" type="datetime-local">
 
     <label for="location"></label>
-    <input id="location" name="location" type="datetime-local">
+    <input id="location" name="location" type="text">
 
     <input type="submit">
 </form>
