--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -27,6 +27,7 @@
     <input type="submit">
 </form>
 
-<p><a href="/showEvents">Show Events</a></p>
+<p><a href="/addevent">Add new event</a></p>
+<p><a href="/showevents">Show events</a></p>
 </body>
 </html>
